<!--
  ~ This file is a part of project QuickShop, the name is pom.xml
  ~  Copyright (C) PotatoCraft Studio and contributors
  ~
  ~  This program is free software: you can redistribute it and/or modify it
  ~  under the terms of the GNU General Public License as published by the
  ~  Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful, but WITHOUT
  ~  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  ~  FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
  ~  for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ghostchu</groupId>
    <artifactId>quickshop-hikari</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>16</java.version>
        <developer>Ghost-chu</developer>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <licenses>
        <license>
            <name>GPL v3 License</name>
            <url>https://www.gnu.org/licenses/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <name>quickshop-hikari</name>
    <description>Another QuickShop fork</description>
    <url>https://github.com/${developer}/${artifactId}</url>

    <developers>
        <developer>
            <id>Ghost_chu</id>
            <name>Ghost chu</name>
            <email>2908803755@qq.com</email>
            <url>https://www.ghostchu.com</url>
            <timezone>Asia/Shanghai</timezone>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:${developer}/${artifactId}.git</connection>
        <developerConnection>scm:git:git@github.com:${developer}/${artifactId}.git</developerConnection>
        <url>https://github.com/${developer}/${artifactId}</url>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <url>https://github.com/${developer}/${name}/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <ciManagement>
        <system>GitHub Actions</system>
        <url>https://github.com/${developer}/${artifactId}/actions/workflows/maven.yml</url>
    </ciManagement>

    <pluginRepositories>
        <pluginRepository>
            <id>apache.snapshots</id>
            <url>https://repository.apache.org/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.3.0-SNAPSHOT</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <configuration>
                                <finalName>${artifactId}</finalName>
                                <createDependencyReducedPom>false</createDependencyReducedPom>
                                <minimizeJar>true</minimizeJar>
                                <createDependencyReducedPom>false</createDependencyReducedPom>
                                <createSourcesJar>false</createSourcesJar>
                                <createTestSourcesJar>false</createTestSourcesJar>
                                <relocations>
                                    <relocation>
                                        <pattern>com.dumptruckman.bukkit.configuration.</pattern>
                                        <shadedPattern>org.maxgamer.quickshop.shade.com.dumptruckman.bukkit.configuration.</shadedPattern>
                                    </relocation>
                                    <relocation>
                                        <pattern>io.papermc.lib.</pattern>
                                        <shadedPattern>org.maxgamer.quickshop.shade.io.papermc.lib.</shadedPattern>
                                    </relocation>
                                    <relocation>
                                        <pattern>de.leonhard.storage.</pattern>
                                        <shadedPattern>org.maxgamer.quickshop.shade.de.leonhard.storage.</shadedPattern>
                                    </relocation>
                                    <!-- MineDown -->
                                    <relocation>
                                        <pattern>de.themoep.</pattern>
                                        <shadedPattern>org.maxgamer.quickshop.shade.de.themoep.</shadedPattern>
                                    </relocation>
                                    <!-- JsonConfiguration Related -->
                                    <relocation>
                                        <pattern>net.minidev.json.</pattern>
                                        <shadedPattern>org.maxgamer.quickshop.shade.net.minidev.json.minidev.json.</shadedPattern>
                                    </relocation>
                                    <!-- SID -->
                                    <relocation>
                                        <pattern>org.enginehub.squirrelid.</pattern>
                                        <shadedPattern>org.maxgamer.quickshop.shade.org.enginehub.squirrelid.</shadedPattern>
                                    </relocation>
                                    <relocation>
                                        <pattern>co.aikar.taskchain.</pattern>
                                        <shadedPattern>org.maxgamer.quickshop.shade.co.aikar.taskchain.</shadedPattern> <!-- Replace this -->
                                    </relocation>
                                </relocations>
                                <transformers>
                                    <transformer
                                            implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                        <mainClass>org.maxgamer.quickshop.javaw.bootstrap.Bootstrap</mainClass>
                                    </transformer>
                                </transformers>
                                <filters>
                                    <filter>
                                        <excludes>
                                            <exclude>META-INF/*.SF</exclude>
                                            <exclude>META-INF/*.DSA</exclude>
                                            <exclude>META-INF/*.RSA</exclude>
                                            <exclude>META-INF/*.kotlin_module</exclude>
                                            <exclude>META-INF/*.txt</exclude>
                                            <exclude>META-INF/proguard/*</exclude>
                                            <exclude>META-INF/services/*</exclude>
                                            <exclude>META-INF/versions/9/*</exclude>
                                            <exclude>*License*</exclude>
                                            <exclude>*LICENSE*</exclude>
                                        </excludes>
                                    </filter>
                                </filters>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <excludePackageNames>org.maxgamer.quickshop.nonquickshopstuff.*</excludePackageNames>
                    <!--<aggregate>true</aggregate>
                    <charmvnset>UTF-8</charmvnset>
                    <docencoding>UTF-8</docencoding>-->
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <failOnError>false</failOnError>
                            <additionalJOption>-Xdoclint:none</additionalJOption>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.22</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>23.0.0</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <modules>
        <module>platform/quickshop-platform-interface</module>
        <module>platform/quickshop-platform-spigot</module>
        <module>platform/quickshop-platform-paper</module>
        <module>quickshop-bukkit</module>
        <module>compatibility/clearlag</module>
        <module>compatibility/nocheatplus</module>
        <module>compatibility/worldguard</module>
    </modules>
</project>
